// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCardChartLegend Component should handle a click event: click event post 1`] = `
<Component
  className="victory-legend-item"
  component="a"
  icon={
    <div
      aria-hidden={true}
      className="legend-icon"
      style={
        Object {
          "backgroundColor": "#000000",
          "visibility": "visible",
        }
      }
    />
  }
  isDisabled={false}
  key="curiosity-button-loremIpsum"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
  variant="link"
>
  t(curiosity-graph.loremIpsumLabel, [object Object])
</Component>
`;

exports[`GraphCardChartLegend Component should handle a click event: click event pre 1`] = `
<Component
  className="victory-legend-item"
  component="a"
  icon={
    <div
      aria-hidden={true}
      className="legend-icon"
      style={
        Object {
          "backgroundColor": "#000000",
          "visibility": "visible",
        }
      }
    />
  }
  isDisabled={false}
  key="curiosity-button-loremIpsum"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
  variant="link"
>
  t(curiosity-graph.loremIpsumLabel, [object Object])
</Component>
`;

exports[`GraphCardChartLegend Component should handle a click event: click event update 1`] = `
<Component
  className="victory-legend-item"
  component="a"
  icon={
    <EyeSlashIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      title={null}
    />
  }
  isDisabled={false}
  key="curiosity-button-loremIpsum"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
  variant="link"
>
  t(curiosity-graph.loremIpsumLabel, [object Object])
</Component>
`;

exports[`GraphCardChartLegend Component should handle variations in data when returning legend items: legend item, MISSING tooltip content 1`] = `
<Unknown
  className="victory-legend-item"
  component="a"
  icon={
    <div
      aria-hidden={true}
      className="legend-icon"
      style={
        Object {
          "backgroundColor": "#000000",
          "visibility": "visible",
        }
      }
    />
  }
  isDisabled={false}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
  variant="link"
>
  lorem ispum
</Unknown>
`;

exports[`GraphCardChartLegend Component should handle variations in data when returning legend items: legend item, WITH tooltip content 1`] = `
<Tooltip
  appendTo={[Function]}
  aria="describedby"
  boundary="window"
  className=""
  content={
    <p>
      dolor sit
    </p>
  }
  distance={-10}
  enableFlip={true}
  entryDelay={100}
  exitDelay={0}
  flipBehavior={
    Array [
      "top",
      "right",
      "bottom",
      "left",
      "top",
      "right",
      "bottom",
    ]
  }
  id=""
  isAppLauncher={false}
  isContentLeftAligned={false}
  isVisible={false}
  maxWidth="18.75rem"
  position="top"
  tippyProps={Object {}}
  trigger="mouseenter focus"
  zIndex={9999}
>
  <Unknown
    className="victory-legend-item"
    component="a"
    icon={
      <div
        aria-hidden={true}
        className="legend-icon"
        style={
          Object {
            "backgroundColor": "#000000",
            "visibility": "visible",
          }
        }
      />
    }
    isDisabled={false}
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
    variant="link"
  >
    lorem ispum
  </Unknown>
</Tooltip>
`;

exports[`GraphCardChartLegend Component should handle variations in data when returning legend items: legend item, disabled 1`] = `
<Unknown
  className="victory-legend-item"
  component="a"
  icon={
    <EyeSlashIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      title={null}
    />
  }
  isDisabled={true}
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
  variant="link"
>
  lorem ispum
</Unknown>
`;

exports[`GraphCardChartLegend Component should render a basic component: basic 1`] = `
<Fragment>
  <Component
    className="victory-legend-item"
    component="a"
    icon={
      <div
        aria-hidden={true}
        className="legend-icon"
        style={
          Object {
            "backgroundColor": "#000000",
            "visibility": "visible",
          }
        }
      />
    }
    isDisabled={false}
    key="curiosity-button-loremIpsum"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
    variant="link"
  >
    t(curiosity-graph.loremIpsumLabel, [object Object])
  </Component>
</Fragment>
`;

exports[`GraphCardChartLegend Component should render basic data: data 1`] = `
<Fragment>
  <Component
    className="victory-legend-item"
    component="a"
    icon={
      <div
        aria-hidden={true}
        className="legend-icon"
        style={
          Object {
            "backgroundColor": "#000000",
            "visibility": "visible",
          }
        }
      />
    }
    isDisabled={false}
    key="curiosity-button-loremIpsum"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
    variant="link"
  >
    t(curiosity-graph.loremIpsumLabel, [object Object])
  </Component>
  <Component
    className="victory-legend-item"
    component="a"
    icon={
      <EyeSlashIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
        title={null}
      />
    }
    isDisabled={true}
    key="curiosity-button-ametConsectetur"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
    variant="link"
  >
    t(curiosity-graph.ametConsecteturLabel, [object Object])
  </Component>
  <Component
    className="victory-legend-item"
    component="a"
    icon={
      <hr
        aria-hidden={true}
        className="threshold-legend-icon"
        style={
          Object {
            "borderTopColor": "#ff0000",
            "visibility": "visible",
          }
        }
      />
    }
    isDisabled={false}
    key="curiosity-button-dolorSit"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
    variant="link"
  >
    t(curiosity-graph.thresholdLabel)
  </Component>
  <Component
    className="victory-legend-item"
    component="a"
    icon={
      <hr
        aria-hidden={true}
        className="threshold-legend-icon"
        style={
          Object {
            "borderTopColor": "#ff0000",
            "visibility": "visible",
          }
        }
      />
    }
    isDisabled={false}
    key="curiosity-button-nonCursus"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
    variant="link"
  >
    t(curiosity-graph.thresholdLabel)
  </Component>
</Fragment>
`;
